# exercise-data-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/concept2/: ingest_c2.py
