[tool.poetry]
name = "exercise-data-pipeline"
version = "0.1.0"
description = "Data pipelines for Strava/Concept2"
authors = ["Guido Petri <18634426+guidopetri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
polars = "^0"
requests = "^2"
pandas = "^2"
luigi = "^3"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pre-commit = "^3"
pytest-cov = "^4"
pandas-stubs = "^2"
pyright = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["."]
exclude = ["**/test_*.py"]
